public/stylesheets/main.css
html {
    font-size: 62.5%;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    /* position: relative; */
    height: 100%;
}

h1 {
    /* font-size: 4.5rem; */
    font-weight: lighter;
}

.nav-links {
    list-style: none;
    display: flex;
    justify-content: flex-end;
    font-family: 'Anton', sans-serif;
    font-size: 3rem;
    /* flex: 1; */
    order: 2;
    width: 100%;
}

.nav-links li {
    display: flex;
    align-items: center;
    justify-content: center;
}

.nav-links li:hover {
    transition: 0.4s;
    background-color: #e3784d;
    border-radius: 20px;
}

.hamburger {
    order: 1;
    display: none;
    flex-direction: column;
    justify-content: space-between;
    width: 100%;
    height: 17px;
    flex: 1;
    align-items: flex-end;
}

.hamburger span {
    height: 3px;
    width: 37px;
    background-color: black;
    border-radius: 10px;
    transition: all 0.3s ease;
}

.toggle .line1 {
    transform: rotate(-45deg) translate(-5px, 5px)
}

.toggle .line2 {
    opacity: 0;
}

.toggle .line3 {
    transform: rotate(45deg) translate(-5px, -5px)
}

a:active, a:focus {
    box-shadow: none;
    outline: none;
    -moz-outline-style: none;
    outline-style: none;
}

a {
    color: black;
    text-decoration: none;
    padding: 0 1rem;
}

nav {
    display: flex;
    /* min-height: 6vh; */
    /* min-height: 10vh; */
    width: 80%;
    margin: auto;
    align-items: center;
    justify-content: space-between;
    margin-top: 2rem;
}

.logo {
    flex: 1;
    font-size: 5.5rem;
    /* font-family: 'Covered By Your Grace', cursive; */
    font-family: 'Racing Sans One', cursive;
    text-shadow: 2px 2px 0px #fff, 7px 6px 0px rgba(0,0,0,0.15);
}

main {
    display: flex;
    min-height: 100%;
    flex-direction: column;
}

.main {
    /* min-height: 100%; */
    display: flex;
    width: 80%;
    margin: auto;
}

body {
    overflow-x: hidden;
}

body::-webkit-scrollbar {
    display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */

html {
    -ms-overflow-style: none;
    /* IE and Edge */
    scrollbar-width: none;
    /* Firefox */
}

h2 {
    font-size: 3rem;
    letter-spacing: 0.5px;
    /* font-family: 'Bebas Neue', cursive; */
    font-family: 'Anton', sans-serif;
}

.description {
    font-size: 2.4rem;
    margin: 6rem 0;
    font-family: 'Bebas Neue', cursive;
}

.contactText {
    font-size: 1.9rem;
    font-family: 'Bebas Neue', cursive;
}

.about {
    /* height: 100%; */
    width: 40%;
    margin: auto 0;
    /* margin-bottom: 14%; */
    text-align: center;
}

.music {
    display: flex;
    flex-direction: column;
    width: 60%;
    max-height: 60rem;
    margin: auto 0;
    align-items: center;
    font-family: 'Bebas Neue', cursive;
    overflow-y: auto;
}

.music {
    overflow: auto;
    background: /* Shadow covers */
    linear-gradient(white 30%, rgba(255, 255, 255, 0)), linear-gradient(rgba(255, 255, 255, 0), white 70%) 0 100%, /* Shadows */
    radial-gradient(50% 0, farthest-side, rgba(0, 0, 0, .2), rgba(0, 0, 0, 0)), radial-gradient(50% 100%, farthest-side, rgba(0, 0, 0, .2), rgba(0, 0, 0, 0)) 0 100%;
    background: /* Shadow covers */
    linear-gradient(white 30%, rgba(255, 255, 255, 0)), linear-gradient(rgba(255, 255, 255, 0), white 70%) 0 100%, /* Shadows */
    radial-gradient(farthest-side at 50% 0, rgba(0, 0, 0, .2), rgba(0, 0, 0, 0)), radial-gradient(farthest-side at 50% 100%, rgba(0, 0, 0, .2), rgba(0, 0, 0, 0)) 0 100%;
    background-repeat: no-repeat;
    background-color: white;
    background-size: 100% 40px, 100% 40px, 100% 14px, 100% 14px;
    /* Opera doesn't support this in the shorthand */
    background-attachment: local, local, scroll, scroll;
}

.music::-webkit-scrollbar {
    display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */

.music {
    -ms-overflow-style: none;
    /* IE and Edge */
    scrollbar-width: none;
    /* Firefox */
}

.songContainer {
    width: 100%;
    margin: 1rem 0;
    padding: 1.5rem 0;
    padding-left: 4rem;
    padding-right: 10rem;
}

.songInfo {
    display: flex;
    width: 100%;
    /* justify-content: space-between; */
    /* font-size: 2.7rem; */
    /* padding-left: 15%; */
}

/* .name, .time, .rate {
	width: 33%;
} */

.name {
    text-align: center;
    width: 40%;
    font-size: 2.7rem;
}

/* .time {
    text-align: right;
    width: 30%;
} */

.rate {
    text-align: center;
    /* margin-left: ; */
    width: 40%;
    font-size: 2.3rem;
}

.songPlayer {
    display: flex;
    justify-content: space-around;
    width: 100%;
    margin: 0.5rem 0;
}

.playBtn {
    margin: auto;
    margin-left: 2rem;
    background-color: rgba(255, 255, 255, 0);
    color:#e3784d;
    outline: none;
    min-width: 70px;
    min-height: 70px;
    font-size: 13px;
    border: 3px solid #e3784d;
    border-radius: 50%;
}

/* i.fas {
    text-align: center;
    min-width: 45px;
    min-height: 45px;
    border: 3px solid #e3784d;
    border-radius: 50%;
} */

hr {
    margin-top: 1.5rem;
    border: 0;
    height: 1px;
    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
}

.footer-container {
    background-color: black;
    width: 100%;
    min-height: 5vh;
    align-items: center;
    padding: 1rem 0;
}

.footer {
    width: 80%;
    margin: auto;
    color: rgb(245, 245, 245);
    display: flex;
    justify-content: space-between;
}

.rights {
    display: flex;
    flex-direction: column;
    flex: 4;
    font-size: 1.6rem;
    font-family: 'Bebas Neue', cursive;
    font-weight: lighter;
    letter-spacing: 2px;
}

.socialLinks {
    list-style: none;
    display: flex;
    justify-content: space-between;
    flex: 1;
    font-size: 3rem;
    align-items: center;
}

.socialLink a {
    padding: 0 1rem;
    color: rgb(240, 240, 240);
}

a#soundcloud:hover {
    color: #ff7700;
}

a#soundcloud {
    font-size: 3.5rem;
}

a#instagram {
    font-size: 3.5rem;
}
/* ... */

